--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 {% block navbar %}
 <div class="navbar navbar-default" role="navigation">
-	<a class="navbar-brand" href="#">MangoApollon</a>
+	<a class="navbar-brand" href="/">MangoApollon</a>
 		<ul class="nav nav-pills">
 			<a href="/contact" class="btn btn-default navbar-btn" role="button">Contact me</a>
 		</ul>
