--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">1.Who am I?</a>
 					</h4>
 				</div>
-				<div id="collapse1" class="panel-collapse collapse-in">
+				<div id="collapse1" class="panel-collapse collapse">
 					<div class="panel-body">I am MangoApollon. "MangoApollon" is a pseudonymn I created to make data mining. It comes from "Mango", the fruit,and "Apollo", the greek god.</div>
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2.What do I do?</a>
 					</h4>
 				</div>
-				<div id="collapse2" class="panel-collapse collapse-in">
+				<div id="collapse2" class="panel-collapse collapse">
 					<div class="panel-body">I am a data miner. I collect large amounts of data and find patterns in them.
 					To find patterns, I use tools as machine learning and statistics.</div>
 				</div> 
@@ -48,7 +48,7 @@
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">3.What am I looking for?</a>
 					</h4>
 				</div>
-				<div id="collapse3" class="panel-collapse collapse-in">
+				<div id="collapse3" class="panel-collapse collapse">
 					<div class="panel-body">Fashion and Entertainment Industries data.</div>
 				</div>
 			</div>	
