--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,13 +10,10 @@
 	<body>
 		<div class="jumbotron">
 			<h1>MangoApollon</h1>
-			<p>Trend-oriented data miner</p>
-		</div>
-		<div class="container">
-			<h2>Contacts:</h2>
+			<p>Trend-Oriented Data Miner</p>
 		</div>
 		<main>
-			Twitter: @MangoApollon
+			<h2>Twitter: @MangoApollon</h2>
 		</main>
 	</body>
 </html>
