--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
 	<body>
 		<div class="jumbotron">
 			<h1>MangoApollon</h1>
-			<p>Trend-oriented data miner</p>
+			<p>Trend-Oriented Data Miner</p>
 		</div>
 		<div class=container>
 			<h2>Questions and Answers</h2>
 		</div>
 		<div class="panel-group" id="accordion">
-			<div class="panel panel-default">
+			<div class="panel panel-warning">
 				<div class="panel panel-heading">
 					<h4 class="panel-title">
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">1.Who am I?</a>
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 
-			<div class="panel panel-default">
+			<div class="panel panel-warning">
 				<div class="panel panel-heading">
 					<h4 class="panel-title">
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2.What do I do?</a>
@@ -42,7 +42,7 @@
 					To find patterns, I use tools as machine learning and statistics.</div>
 				</div> 
 			</div>
-			<div class="panel panel-default">
+			<div class="panel panel-warning">
 				<div class="panel panel-heading">
 					<h4 class="panel-title">
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">3.What am I looking for?</a>
