--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 					</h4>
 				</div>
 				<div id="collapse3" class="panel-collapse collapse">
-					<div class="panel-body">Fashion and Entertainment Industries data.</div>
+					<div class="panel-body"> Data about products, services and companies.</div>
 				</div>
 			</div>	
 		</div>
